--- a/src/App.scss
+++ b/src/App.scss
@@ -3,3 +3,10 @@
     width: 100%;
     margin: 0 auto;
 }
+
+@media (max-width: 640px) {
+  .container {
+    padding: 0 20px;
+    box-sizing: border-box;
+  }
+} 
