--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -5,6 +5,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+      flex-wrap: wrap;
   }
 
   &__navigation-link {
@@ -19,3 +20,15 @@
       }
   }
 }
+
+@media (max-width: 640px) {
+  .app-header { 
+      & .container {
+        padding: 0 20px;
+        box-sizing: border-box;
+    }
+    &__navigation {
+        margin: 20px 0;
+    }
+    }
+} 
